# beni

./: .api_coverage.yml  .gitignore  .rubocop.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Gemfile  README.md  Rakefile  SPEC.md  Steepfile  beni.gemspec  rbs_collection.lock.yaml  rbs_collection.yaml  release-please-config.json  rust-toolchain.toml
.claude/: settings.json
.claude/hooks/: clippy.sh
.github/workflows/: main.yml  release-crate.yml  release-please.yml  release.yml
build_config/: beni.rb  mruby.rb  wasi_toolchain.rb
crates/beni/: Cargo.toml  README.md  build.rs
crates/beni-sys/: Cargo.toml  README.md  build.rs
crates/beni-sys/src/: lib.rs  wrapper.h
crates/beni/src/: array.rs  ccontext.rs  class.rs  convert.rs  data.rs  error.rs  gem.rs  hash.rs  lib.rs  method.rs  proc.rs  range.rs  state.rs  string.rs  symbol.rs  value.rs
crates/beni/src/state/: arena.rs  args.rs  define.rs  factory.rs  load.rs  protect.rs  symbol.rs
docs/: api_coverage.md
lib/: beni.rb
lib/beni/: build_config.rb  builder.rb  configuration.rb  dsl.rb  selected_toolchain.rb  target.rb  tasks.rb  toolchain_definition.rb  vendor.rb  version.rb
lib/beni/dsl/: context.rb  definition_context.rb  target_context.rb
sig/: beni.rbs
sig/beni/: build_config.rbs  builder.rbs  configuration.rbs  dsl.rbs  selected_toolchain.rbs  target.rbs  tasks.rbs  toolchain_definition.rbs  vendor.rbs
sig/beni/dsl/: context.rbs  definition_context.rbs  target_context.rbs
sig/patches/: open-uri.rbs
tasks/: coverage.rake  mruby.rake  rust.rake  surface.rake  vendor.rake
tasks/support/: beni_coverage.rb  beni_mruby.rb  beni_rust.rb  beni_surface.rb  beni_vendor.rb
tasks/support/beni_coverage/: frequency.rb  report.rb  surface.rb
tasks/support/beni_vendor/: checksum.rb  downloader.rb  tarball.rb  toolchain.rb
templates/: build_config.rb
test/: test_beni.rb  test_helper.rb
test/beni/: test_build_config.rb  test_builder.rb  test_builder_build.rb  test_lockstep.rb  test_tasks.rb  test_tasks_cleanup.rb  test_tasks_wiring.rb  test_vendor.rb
test/beni/dsl/: test_errors.rb  test_resolution.rb  test_settings.rb
test/scenarios/default_host/: Rakefile
test/scenarios/generated_config/: Rakefile
