# beni-sys ŌĆö bindgen FFI surface over the mruby C API.
#
# Sole responsibility: `bindgen`-generated FFI declarations for the
# mruby C API surface its consumers call (the `mrb_open` /
# `mrb_load_nstring` / `mrb_define_class_under` / ŌĆ” family plus the
# `mrb_value` and `mrb_state` ABI types). Bindings are produced at
# build time from `src/wrapper.h` against `vendor/mruby/include/`.
#
# `wrapper.h` also carries `static inline` wrappers around mruby
# macros and unexported helpers that bindgen cannot reach directly
# (`RSTRING_PTR` / `RSTRING_LEN`, `mrb_obj_ptr`, `mrb_gc_arena_save`
# / `_restore`, `mrb_proc_new`). bindgen's `wrap_static_fns` emits
# trampolines for each into the single `mruby_static_wrappers.c`
# file in OUT_DIR ŌĆö that file is the entire C translation unit the
# crate compiles. No hand-written `.c` shims remain.
#
# Build-time inputs (consumed via env, populated by the beni gem's
# build chain):
#
#   * `MRUBY_LIB_DIR` ŌĆö absolute path to the directory containing the
#     pre-built `libmruby.a`. Drives `cargo:rustc-link-*`. Highest
#     precedence.
#   * `BENI_VENDOR_DIR` ŌĆö the vendor tree `rake beni:build` populated;
#     host cargo targets read its staged `mruby/build/host/lib/`.
#   * `WASI_SDK_PATH` ŌĆö absolute path to the unpacked wasi-sdk. Drives
#     both the bindgen clang invocation (`--sysroot`, `--target`) and
#     the setjmp library link directive (required for mruby's
#     WebAssembly exception handling).
#
# What this crate is NOT
# ----------------------
#   * Not a magnus-style typed value wrapper. The safe `Mrb` /
#     `Ccontext` / `Value` / `Class` / `Array` / `Hash` ergonomics,
#     the `IntoValue` / `FromValue` trait seam, the `Format`-based
#     `mrb_get_args` dispatch, and the typed `mrb_func_t` alias all
#     live in the sibling `beni` crate. This crate stays a pure
#     FFI surface (bindings + ABI constants + host placeholders);
#     the typed wrappers consume it as a path dependency.

[package]
name = "beni-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "bindgen-driven mruby C API FFI bindings and layout-safe C shims; consumed by the typed `beni` wrapper crate."
readme = "README.md"
keywords = ["mruby", "ruby", "ffi", "bindings"]
categories = ["external-ffi-bindings"]
# Exactly one crate links libmruby; build.rs publishes `cargo:linked=1`
# through this key so the `beni` wrapper's build script can mirror the
# `mruby_linked` cfg via DEP_MRUBY_LINKED.
links = "mruby"

[lib]
# `rlib` only ŌĆö this crate produces no standalone artefact. It is
# consumed as a path dependency by the `beni` wrapper crate, whose
# downstream consumers carry the eventual symbol surface.
crate-type = ["rlib"]
# bindgen carries mruby's C header comments into the generated
# bindings; rustdoc would try to compile their C examples as Rust
# doctests. The generated surface has no runnable Rust examples.
doctest = false

[build-dependencies]
# `cc` compiles the bindgen-emitted static-fn trampoline file ŌĆö the
# crate's single C translation unit ŌĆö against the staged mruby
# headers, so it only runs when archive discovery links a build (see
# `build.rs`).
cc = "1"
# `bindgen` generates the mruby C API FFI surface from `src/wrapper.h`.
bindgen = "0.72"
